Edit media query to fix calc container overflow issue

--- a/style.css
+++ b/style.css
@@ -27,8 +27,7 @@ body {
 
 @media only screen and (max-width: 600px) {
   #calccontainer {
-    height:auto;
-    width:50%;
+    width:200px;
     }
 }
 
